<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_button"
        android:layout_marginBottom="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/imgMediaCoverContainer"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <!-- ImageView for the media cover -->
                <ImageView
                    android:id="@+id/imgMediaCover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:contentDescription="@null" />

                <ImageView
                    android:id="@+id/btnFavorite"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/button_bg"
                    android:src="@drawable/ic_favorite_border"
                    android:padding="12dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="bottom|end"
                    android:contentDescription="@string/nullDescription"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tvEventName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/imgMediaCoverContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="16dp"/>

            <ImageView
                android:id="@+id/timeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEventName"
                android:src="@drawable/ic_time"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@null"
                android:layout_marginHorizontal="16dp"/>

            <TextView
                android:id="@+id/tvBeginTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/timeIcon"
                app:layout_constraintTop_toTopOf="@+id/timeIcon"
                app:layout_constraintBottom_toBottomOf="@+id/timeIcon"
                android:layout_marginHorizontal="16dp"/>

            <ImageView
                android:id="@+id/quotaIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/timeIcon"
                app:layout_constraintTop_toBottomOf="@+id/timeIcon"
                android:src="@drawable/ic_person"
                android:layout_marginTop="8dp"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/tvOwnerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/quotaIcon"
                app:layout_constraintTop_toTopOf="@+id/quotaIcon"
                android:layout_marginHorizontal="16dp"/>

            <TextView
                android:id="@+id/tvLabelDeskripsiKegiatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvOwnerName"
                app:layout_constraintStart_toStartOf="@+id/timeIcon"
                android:text="@string/title_deskripsi_kegiatan"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDeskripsiKegiatan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelDeskripsiKegiatan"
                android:layout_marginHorizontal="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="16dp"
        android:layout_marginHorizontal="16dp">
        <TextView
            android:id="@+id/tvQuota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnDaftarEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonDaftarSekarang"
            android:textSize="16sp"
            android:background="@drawable/button_bg"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>